# Refinery-app

./: .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  skills-lock.json
ai-engine/: .env.example  Dockerfile  README.md  design document.md  pyproject.toml  requirements.txt
ai-engine/alembic/: env.py
ai-engine/app/: __init__.py  config.py  main.py  scheduler.py
ai-engine/docs/: RAG_SYSTEM.md  agentic-refactor-plan.md
ai-engine/scripts/: backfill_embeddings.py  generate_news_data.py  test_rag_manual.py
ai-engine/src/: email_sender.py
ai-engine/tests/: conftest.py  test_embedding.py  test_llm_service.py  test_rag.py  test_rss_parser.py  test_web_search_service.py  test_writer_and_web_extractor.py
api-server/: Dockerfile  README.md  pom.xml
app/: config.py  main.py
app/agents/: reflection_agent.py  scorer_agent.py  scout_agent.py
app/api/: dependencies.py
app/core/: exceptions.py
app/deep_search/: graph.py  nodes.py  prompts.py  tools.py
app/models/: __init__.py  database.py  schemas.py
app/services/: embedding.py  llm_service.py  rss_parser.py  vector_store.py  web_extractor.py  web_search.py
app/utils/: constants.py  helpers.py
docs/: docker-operations.md  ios-app-business-logic.md
init-db/: 001_init.sql  002_add_deepsearch_report.sql
ios-app/: README.md  project.yml
nginx/: Dockerfile  default.conf
tech-news-ios/: README.md  project.yml
tests/: test_deep_search_nodes.py  test_health.py
web-app/: README.md  app.js  index.html  styles.css
(+207 files in other folders)
